--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".RoomRentingApplication"
         android:allowBackup="true"
@@ -16,7 +17,6 @@
         <activity
             android:name=".presentation.mainActivity.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/App.Starting.Theme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
