--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2024.11.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'io.coil-kt:coil-compose:2.4.0'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.1'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.material3:material3-android:1.3.1'
