--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,28 +76,27 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.1"
 
     //Compose Navigation
-    def nav_version = "2.6.0"
-    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.navigation:navigation-compose:2.8.4"
 
     //Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.45"
-    kapt "com.google.dagger:hilt-compiler:2.45"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation "com.google.dagger:hilt-android:2.52"
+    kapt "com.google.dagger:hilt-compiler:2.52"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
 
     //Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
 
     //Kotlinx Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0"
 
     //Coil
-    implementation("io.coil-kt:coil-compose:2.4.0")
+    implementation("io.coil-kt:coil-compose:2.7.0")
 
     //Datastore
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.1.1"
 
     //Compose Foundation
     implementation "androidx.compose.foundation:foundation:1.4.3"
@@ -111,7 +110,7 @@ dependencies {
     implementation "androidx.paging:paging-compose:3.2.0-rc01"
 
     // OkHttp Core
-    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
 
     // OkHttp Logging Interceptor
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
